--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #333;
+    color: #fff;
   }
   
   header {
-    background-color: #333;
+    background-color: #000000;
     color: #fff;
     padding: 20px;
   }
