--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #333;
+    background: rgb(48,62,82);
+    background: radial-gradient(circle, rgba(48,62,82,1) 45%, rgba(32,40,51,1) 62%);
+    
     color: #fff;
   }
   
   header {
-    background-color: #000000;
     color: #fff;
     padding: 20px;
   }
@@ -29,40 +30,36 @@ body {
     margin: 0 10px;
   }
   
-  nav ul li a {
+  .menuLink {
+    position: relative;
     color: #fff;
     text-decoration: none;
     padding: 10px;
   }
   
-  nav ul li a:hover {
-    background-color: #ddd;
-    color: #333;
+  .menuLink:hover {
+    color: #fff;
+  }
+  
+  .menuLink::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  .menuLink:hover::before {
+    transform: scaleX(1);
   }
   main { 
     margin: 20px;
   }
   
-  .container {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  h1 {
-    font-size: 36px;
-    margin-top: 0;
-  }
-  
-  .project {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .project h2 {
-    margin-top: 0;
-  }
   
   
