--- a/style.css
+++ b/style.css
@@ -1,46 +1,46 @@
-body {
+  body {
     font-family: Arial, Helvetica, sans-serif, sans-serif;
     margin: 0;
     padding: 0;
-    background: rgb(48,62,82);
-    background: radial-gradient(circle, rgba(48,62,82,1) 45%, rgba(32,40,51,1) 62%);
-    
+    background: rgb(48, 62, 82);
+    background: radial-gradient(circle, rgba(48, 62, 82, 1) 45%, rgba(32, 40, 51, 1) 62%);
+
     color: #fff;
   }
-  
+
   header {
     color: #fff;
     padding: 20px;
   }
-  
+
   nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
+
   nav ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
   }
-  
+
   nav ul li {
     margin: 0 10px;
   }
-  
+
   .menuLink {
     position: relative;
     color: #fff;
     text-decoration: none;
     padding: 10px;
   }
-  
+
   .menuLink:hover {
     color: #fff;
   }
-  
+
   .menuLink::before {
     content: "";
     position: absolute;
@@ -53,13 +53,39 @@ body {
     transform: scaleX(0);
     transition: transform 0.3s ease;
   }
-  
+
   .menuLink:hover::before {
     transform: scaleX(1);
   }
-  main { 
+
+  main {
     margin: 20px;
   }
-  
-  
-  
+
+  .botaoCv {
+    appearance: none;
+    background-color: #000000;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 13px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 5px;
+    padding: 13px 21px;
+    text-align: center;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+  }
+  .botaoCv:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+  }
+
+  .botaoCv:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
