--- a/style.css
+++ b/style.css
@@ -89,3 +89,50 @@
     box-shadow: none;
     transform: translateY(0);
   }
+  footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 40%; 
+    background-color: #041225;
+    padding: 5px 0px;
+
+  }
+  .conteudoFooter p{ 
+    text-align: center;
+  }
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 13px 21px;
+
+  }
+  .social-icons a:hover {
+    box-shadow: rgba(114, 114, 114, 0.199) 0px 8px 20px;
+    transform: translateY(-2px);
+
+  }
+  
+  .social-icons a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    margin-right: 5px;
+    border-radius: 50%;
+    background-color: #333;
+    list-style: none;
+
+  }
+  
+  .social-icons a i {
+    color: #fff;
+    font-size: 24px;
+  }
+  
+  .divPosts{ 
+    text-align: center;
+  }
+ 
