--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     font-family: Arial, Helvetica, sans-serif, sans-serif;
     margin: 0;
     padding: 0;
-    background: rgb(48, 62, 82);
-    background: radial-gradient(circle, rgba(48, 62, 82, 1) 45%, rgba(32, 40, 51, 1) 62%);
+    background: rgb(50,72,102);
+background: linear-gradient(0deg, rgba(50,72,102,1) 34%, rgba(32,40,51,1) 78%);
 
     color: #fff;
   }
@@ -80,6 +80,7 @@
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
     user-select: none;
   }
+
   .botaoCv:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
@@ -89,18 +90,21 @@
     box-shadow: none;
     transform: translateY(0);
   }
+
   footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 40%; 
+    height: 40%;
     background-color: #041225;
     padding: 5px 0px;
 
   }
-  .conteudoFooter p{ 
+
+  .conteudoFooter p {
     text-align: center;
   }
+
   .social-icons {
     display: flex;
     justify-content: center;
@@ -108,12 +112,13 @@
     padding: 13px 21px;
 
   }
+
   .social-icons a:hover {
     box-shadow: rgba(114, 114, 114, 0.199) 0px 8px 20px;
     transform: translateY(-2px);
 
   }
-  
+
   .social-icons a {
     display: flex;
     justify-content: center;
@@ -126,39 +131,57 @@
     list-style: none;
 
   }
-  
+
   .social-icons a i {
     color: #fff;
     font-size: 24px;
   }
-  
-  .divPosts{ 
+
+  .divPosts {
     text-align: center;
   }
-  .postsConteudo{ 
+
+  .postsConteudo {
     height: 100vh;
     width: 80vh;
+    margin-top: 10px;
   }
-  body{
-    background: #000;
-    padding-top: 10px;
-  } 
-  .textoAnimacaoSection svg{
+  .textoAnimacaoSection svg {
     height: 300px;
-    
+
   }
-  .textoAnimacaoSection{
+
+  .textoAnimacaoSection {
     width: 100px;
   }
-  
-  
+  .textoInformativoCarrossel{
+    font-size: 16px;
+    color: #f7ffff;
+    text-align: center;
+    
+  }
+  .tituloCarrossel{ 
+    font-size: 22px;
+    color: #f7ffff;
+    font-weight: bold;
+
+  }
+
+
   @media only screen and (max-width: 768px) {
     .postsConteudo {
       width: 100%;
     }
-    .textoAnimacaoSection svg{
+
+    .textoAnimacaoSection svg {
       height: 150px;
-      
+
+
     }
-    
+    .textoHomeSection {
+      text-align: center;
+    }
+    .fontHomeSection{ 
+      font-size: 18px;
+    }
   }
