--- a/style.css
+++ b/style.css
@@ -1,187 +1,210 @@
-  body {
-    font-family: Arial, Helvetica, sans-serif, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: rgb(50,72,102);
-background: linear-gradient(0deg, rgba(50,72,102,1) 34%, rgba(32,40,51,1) 78%);
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400&display=swap');
 
-    color: #fff;
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('https://img.freepik.com/fotos-gratis/fundo-abstrato-escuro_1048-1920.jpg?w=740&t=st=1682033178~exp=1682033778~hmac=5ba5a34087f62c6da80e3d0f9a44768d2e3eb31bf2181aaf22ce10b72534ad08');
+  font-family: 'Outfit', sans-serif;
+  color: #fff;
+}
+
+header {
+  padding: 20px;
+}
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+
+
+}
+
+
+
+.menuLink {
+  margin: 0 10px;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.menuLink:hover {
+  color: #fff;
+}
+
+.menuLink::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.menuLink:hover::before {
+  transform: scaleX(1);
+}
+
+main {
+  margin: 20px;
+}
+
+.botaoCv {
+  appearance: none;
+  background-color: #000000;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 5px;
+  padding: 13px 21px;
+  text-align: center;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+}
+
+.botaoCv:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.botaoCv:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 40%;
+  background-color: #041225;
+  padding: 5px 0px;
+
+}
+
+.conteudoFooter p {
+  text-align: center;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 13px 21px;
+
+}
+
+.social-icons a:hover {
+  box-shadow: rgba(114, 114, 114, 0.199) 0px 8px 20px;
+  transform: translateY(-2px);
+
+}
+
+.social-icons a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  margin-right: 5px;
+  border-radius: 50%;
+  background-color: #333;
+  list-style: none;
+
+}
+
+.social-icons a i {
+  color: #fff;
+  font-size: 24px;
+}
+
+.divPosts {
+  text-align: center;
+}
+
+.postsConteudo {
+  height: 100vh;
+  width: 80vh;
+  margin-top: 10px;
+}
+
+.textoAnimacaoSection svg {
+  height: 300px;
+
+
+
+}
+
+.textoAnimacaoSection {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+
+.textoInformativoCarrossel {
+  font-size: 16px;
+  color: #f7ffff;
+  text-align: center;
+
+}
+
+.tituloCarrossel {
+  font-size: 22px;
+  color: #f7ffff;
+  font-weight: bold;
+
+}
+
+.digitar {
+  overflow: hidden;
+  animation: digitar 7s steps(60, end) infinite;
+  /* adicionado "infinite" para repetir a animação indefinidamente */
+  white-space: nowrap;
+  margin-left: 0px;
+}
+
+@keyframes digitar {
+  from {
+    width: 0
   }
 
-  header {
-    color: #fff;
-    padding: 20px;
+  to {
+    width: 100%
   }
+}
 
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
 
-  nav ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  nav ul li {
-    margin: 0 10px;
-  }
-
-  .menuLink {
-    position: relative;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px;
-  }
-
-  .menuLink:hover {
-    color: #fff;
-  }
-
-  .menuLink::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #fff;
-    transform: scaleX(0);
-    transition: transform 0.3s ease;
-  }
-
-  .menuLink:hover::before {
-    transform: scaleX(1);
-  }
-
-  main {
-    margin: 20px;
-  }
-
-  .botaoCv {
-    appearance: none;
-    background-color: #000000;
-    border: 2px solid #1A1A1A;
-    border-radius: 15px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 13px;
-    font-weight: 600;
-    line-height: normal;
-    margin: 5px;
-    padding: 13px 21px;
-    text-align: center;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-  }
-
-  .botaoCv:hover {
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-    transform: translateY(-2px);
-  }
-
-  .botaoCv:active {
-    box-shadow: none;
-    transform: translateY(0);
-  }
-
-  footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 40%;
-    background-color: #041225;
-    padding: 5px 0px;
-
-  }
-
-  .conteudoFooter p {
-    text-align: center;
-  }
-
-  .social-icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 13px 21px;
-
-  }
-
-  .social-icons a:hover {
-    box-shadow: rgba(114, 114, 114, 0.199) 0px 8px 20px;
-    transform: translateY(-2px);
-
-  }
-
-  .social-icons a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    margin-right: 5px;
-    border-radius: 50%;
-    background-color: #333;
-    list-style: none;
-
-  }
-
-  .social-icons a i {
-    color: #fff;
-    font-size: 24px;
-  }
-
-  .divPosts {
-    text-align: center;
-  }
-
+@media only screen and (max-width: 768px) {
   .postsConteudo {
-    height: 100vh;
-    width: 80vh;
-    margin-top: 10px;
+    width: 100%;
   }
+
   .textoAnimacaoSection svg {
-    height: 300px;
+    height: 150px;
+
 
   }
 
-  .textoAnimacaoSection {
-    width: 100px;
-  }
-  .textoInformativoCarrossel{
-    font-size: 16px;
-    color: #f7ffff;
+  .textoHomeSection {
     text-align: center;
-    
-  }
-  .tituloCarrossel{ 
-    font-size: 22px;
-    color: #f7ffff;
-    font-weight: bold;
 
   }
 
-
-  @media only screen and (max-width: 768px) {
-    .postsConteudo {
-      width: 100%;
-    }
-
-    .textoAnimacaoSection svg {
-      height: 150px;
-
-
-    }
-    .textoHomeSection {
-      text-align: center;
-    }
-    .fontHomeSection{ 
-      font-size: 18px;
-    }
+  .fontHomeSection {
+    font-size: 18px;
   }
+}
