--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 header {
   padding: 20px;
 }
+
 nav ul {
   display: flex;
   list-style: none;
@@ -57,6 +58,11 @@ main {
   margin: 20px;
 }
 
+.tituloBotaoCV {
+  font-size: 15px;
+  margin-top: 40px;
+}
+
 .botaoCv {
   appearance: none;
   background-color: #000000;
@@ -70,6 +76,7 @@ main {
   font-weight: 600;
   line-height: normal;
   margin: 5px;
+  margin-top: -5px;
   padding: 13px 21px;
   text-align: center;
   transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
@@ -171,11 +178,40 @@ footer {
 
 .digitar {
   overflow: hidden;
-  animation: digitar 7s steps(60, end) infinite;
-  /* adicionado "infinite" para repetir a animação indefinidamente */
+  /*  animation: digitar 7s steps(60, end) infinite ; adicionado "infinite" para repetir a animação indefinidamente */
   white-space: nowrap;
-  margin-left: 0px;
+  text-align: center;
+  font-size: 10px;
+  margin: 20px;
 }
+
+.textoHomeSection {
+  text-align: center;
+}
+
+.imgPerfil {
+  border-radius: 50%;
+  width: 15%;
+
+}
+
+.fontHomeSection {
+  font-size: 40px;
+  background: linear-gradient(90deg, rgba(159, 159, 159, 1) 0%, rgba(209, 205, 205, 1) 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
+.nomeFooter {
+  font-size: 13px;
+  margin-top: 5px;
+}
+
+.conteudoFooter {
+  margin: 10px;
+}
+
 
 @keyframes digitar {
   from {
